[REEF-327] Allow users to set additional JVM options
- Add methods addOption, addDefaultOption / setDefaultMemory
  to JVMProcess and JavaLaunchCommandBuilder. This is backwards-
  compatible with runtimes' use of heap slack.
- Parse a subset of JVM option formats, and prevent duplicates of
  those options.
- Expand and add generics to EvaluatorProcess, EvaluatorProcessFactory,
  LaunchCommandBuilder interfaces. These should not break existing code.
- Provide an example for adding options at HelloJVMOptionsREEF/Driver.

JIRA:
  [REEF-327](https://issues.apache.org/jira/browse/REEF-327)

Pull Request:
  This closes #