@@ -25,17 +25,30 @@ import org.apache.reef.util.EnvironmentUtils;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
+import java.util.logging.Logger;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
 
 public final class JavaLaunchCommandBuilder implements LaunchCommandBuilder {
+  private static final Logger LOG = Logger.getLogger(JavaLaunchCommandBuilder.class.getName());
+
   private static final String DEFAULT_JAVA_PATH = System.getenv("JAVA_HOME") + "/bin/" + "java";
   private String stderrPath = null;
   private String stdoutPath = null;
-  private int megaBytes = 0;
   private String evaluatorConfigurationPath = null;
   private String javaPath = null;
   private String classPath = null;
   private Boolean assertionsEnabled = null;
+  private Map<String, JVMOption> options = new HashMap<>();
+  private Map<String, JVMOption> defaultOptions = new HashMap<String, JVMOption>() {{
+      final JVMOption permSize = JVMOption.parseJVMOption("-XX:PermSize=128m");
+      put(permSize.option, permSize);
+      final JVMOption maxPermSize = JVMOption.parseJVMOption("-XX:MaxPermSize=128m");
+      put(maxPermSize.option, maxPermSize);
+    }};
 
   @Override
   public List<String> build() {
@@ -47,14 +60,10 @@ public final class JavaLaunchCommandBuilder implements LaunchCommandBuilder {
           add(javaPath);
         }
 
-        add("-XX:PermSize=128m");
-        add("-XX:MaxPermSize=128m");
-        // Set Xmx based on am memory size
-        add("-Xmx" + megaBytes + "m");
+        applyDefaultOptions();
 
-        if ((assertionsEnabled != null && assertionsEnabled)
-            || EnvironmentUtils.areAssertionsEnabled()) {
-          add("-ea");
+        for (final JVMOption jvmOption : options.values()) {
+          add(jvmOption.toString());
         }
 
         if (classPath != null && !classPath.isEmpty()) {
@@ -84,8 +93,13 @@ public final class JavaLaunchCommandBuilder implements LaunchCommandBuilder {
   @Override
   @SuppressWarnings("checkstyle:hiddenfield")
   public JavaLaunchCommandBuilder setMemory(final int megaBytes) {
-    this.megaBytes = megaBytes;
-    return this;
+    return addOption(JVMOption.parseJVMOption("-Xmx" + megaBytes + "m"));
+  }
+
+  @Override
+  @SuppressWarnings("checkstyle:hiddenfield")
+  public JavaLaunchCommandBuilder setDefaultMemory(final int defaultMegaBytes) {
+    return addDefaultOption(JVMOption.parseJVMOption("-Xmx" + defaultMegaBytes + "m"));
   }
 
   @Override
@@ -128,6 +142,59 @@ public final class JavaLaunchCommandBuilder implements LaunchCommandBuilder {
   }
 
   /**
+   * Add a JVM option.
+   * @param option The full option, e.g. "-XX:+PrintGCDetails"
+   * @return this
+   */
+  public JavaLaunchCommandBuilder addOption(final String option) {
+    return addOption(JVMOption.parseJVMOption(option));
+  }
+
+  /**
+   * Add a default JVM option.
+   * An example use of this method: The runtime sets a sensible default
+   * value that is picked up if the user does not set the same option.
+   * @param option The full option, e.g. "-Xms500m"
+   * @return this
+   */
+  public JavaLaunchCommandBuilder addDefaultOption(final String option) {
+    return addDefaultOption(JVMOption.parseJVMOption(option));
+  }
+
+  private void applyDefaultOptions() {
+    for (final JVMOption defaultOption : defaultOptions.values()) {
+      applyDefaultOption(defaultOption);
+    }
+
+    if ((assertionsEnabled != null && assertionsEnabled)
+        || EnvironmentUtils.areAssertionsEnabled()) {
+      applyDefaultOption(JVMOption.parseJVMOption("-ea"));
+    }
+  }
+
+  private void applyDefaultOption(final JVMOption jvmOption) {
+    if (!options.containsKey(jvmOption.option)) {
+      options.put(jvmOption.option, jvmOption);
+    }
+  }
+
+  private JavaLaunchCommandBuilder addOption(final JVMOption jvmOption) {
+    if (options.containsKey(jvmOption.option)) {
+      LOG.warning("Replaced option " + options.get(jvmOption.option) + " with " + jvmOption);
+    }
+    options.put(jvmOption.option, jvmOption);
+    return this;
+  }
+
+  private JavaLaunchCommandBuilder addDefaultOption(final JVMOption jvmOption) {
+    if (defaultOptions.containsKey(jvmOption.option)) {
+      LOG.warning("Replaced default option " + defaultOptions.get(jvmOption.option) + " with " + jvmOption);
+    }
+    defaultOptions.put(jvmOption.option, jvmOption);
+    return this;
+  }
+
+  /**
    * Enable or disable assertions on the child process.
    * If not set, the setting is taken from the JVM that executes the code.
    *
@@ -138,5 +205,49 @@ public final class JavaLaunchCommandBuilder implements LaunchCommandBuilder {
   public JavaLaunchCommandBuilder enableAssertions(final boolean assertionsEnabled) {
     this.assertionsEnabled = assertionsEnabled;
     return this;
+  }
+
+  /**
+   * Represents the JVM option as a option and value, combined by a separator.
+   * There are many different JVM option formats. This implementation only recognizes
+   * equals-separated and -Xm[nsx] memory options. All other option formats are
+   * represented with an option and empty value and separator.
+   */
+  static final class JVMOption {
+    static final Pattern EQUALS = Pattern.compile("(.+)=(.+)");
+    static final Pattern MEMORY = Pattern.compile("(\\-Xm[nsx])(.+)");
+
+    public final String option;
+    public final String value;
+    public final String separator;
+
+    public JVMOption(final String option, final String value,
+                     final String separator) {
+      this.option = option;
+      this.value = value;
+      this.separator = separator;
+    }
+
+    public static JVMOption parseJVMOption(final String string) {
+
+      final String trimmed = string.trim();
+
+      final Matcher equalsMatcher = EQUALS.matcher(trimmed);
+      if (equalsMatcher.matches()) {
+        return new JVMOption(equalsMatcher.group(1), equalsMatcher.group(2), "=");
+      }
+
+      final Matcher memoryMatcher = MEMORY.matcher(trimmed);
+      if (memoryMatcher.matches()) {
+        return new JVMOption(memoryMatcher.group(1), memoryMatcher.group(2), "");
+      }
+
+      // Unknown options return the entire string as the option
+      return new JVMOption(trimmed, "", "");
+    }
+
+    public String toString() {
+      return option + separator + value;
+    }
   }
 }
